# arco-2.0-pce

./: .gitignore  README.md  config.py  drive_client.py  main.py  main_db.py  pyproject.toml  utils.py  wms_client.py
extractors/: container.py  container_status.py  inventory.py  order_dtl.py  order_hdr.py  order_status.py
sql/: base_status_pedidos_wms_sae.sql  produtividade_sae.sql
